# lms

./: .env  Cargo.toml  README.md  bun.lockb  package-lock.json  package.json
migrations/: 20240202142402_users.down.sql  20240202142402_users.up.sql  20240211040140_classes.down.sql  20240211040140_classes.up.sql  20240211040229_assignments.down.sql  20240211040229_assignments.up.sql  20240211040328_exams.down.sql  20240211040328_exams.up.sql  20240211040514_portfolio.down.sql  20240211040514_portfolio.up.sql
src/: jwt.rs  main.rs  service_boostrap.rs  styles.css
static/css/: style.css  tailwind.css
templates/: base.html  home.html  index.content.html  index.html  login.html  register.html
templates/admin/: base.html  index.content.html  index.html
templates/components/: login-form.html
