[package]
name = "lms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.1", features = ["with-axum", "mime", "mime_guess"] }
askama_axum = "0.4.0"
axum = "0.7.4"
tokio = { version = "1.35.1", features = ["full"] }
tower-http = { version = "0.5.1", features = ["fs", "cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
