[package]
name = "lms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
axum = "0.7.4"
cookie = "0.18.0"
dotenvy = "0.15.7"
jsonwebtoken = "9.2.0"
once_cell = "1.19.0"
rand = "0.8.5"
rust-argon2 = "2.1.0"
serde = { version = "1.0.196", features = ["serde_derive"] }
serde_json = "1.0.113"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "sqlx-postgres", "tls-rustls", "postgres"] }
tera = "1.19.1"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
tower-http = { version = "0.5.1", features = ["fs", "cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
